--- a/source/_posts/think/2016-12-11-talk.md
+++ b/source/_posts/think/2016-12-11-talk.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 date: 2016-12-11
-title: 新手演讲
+title: 新手演讲：走上演讲台的第一步
 categories: [think]
 tags: [experience,think]
 avatarimg: "/img/head.jpg"
@@ -10,24 +10,37 @@ published: false
 
 ---
 
+你是否觉得演讲很重要？是否想登台演讲？是否羡慕在台上侃侃而谈的人？是否希望自己也能站在台前hold住全场？
+
+但是，现实是，你一在陌生人前说话就紧张、在台前说话就浑身冒虚汗！看了那么多的演讲方法的书也get不到重点！是否觉得自己不是这块料，放弃算了？
+
+我也不会什么技巧，讲技巧的书也很多了！本文是我五年演讲实践经验和总结！我花了五年时间，才从当众说话就紧张、冒虚汗，到现在能在台上完成演讲！虽然还有很多不足，不过至少我迈出了这一步！
+
+希望通过此文，能给和当初的我一样不敢上台演讲的你一点帮助，能快速的踏出演讲第一步！
+
+全文1万多字，为了节省大家的时间，做了张思维导图！如果没有大家想了解的内容，可直接绕道！
+
+![](/assets/think/talk/arch.png)
+
 # 内容大于形式
 
-网上有个段子，问：为什么要学习语文？答：当你看到江边落日余晖的美景时，你能脱口而出「落霞与孤鹜齐飞，秋水共长天一色」这样的句子，而不是说一句「卧槽，美爆了！」
+网上有个段子：「为什么要学习语文？」答：当你看到江边落日余晖的美景时，你能脱口而出「落霞与孤鹜齐飞，秋水共长天一色」这样的诗句，而不是「卧槽，美爆了！」
 
-美景是相同的，只是看的人不同，就有了不同的表达！画家看到了，可能会画一幅画；诗人看到了，可能会作一首诗；音乐家看到了，可能会谱一首曲子(我印象比较深刻的是在电影《海上钢琴师》里，男主角用音乐表达不同人的情绪的桥段)；程序员看到了，说不定会写段hello world......
+美景是相同的，只是看的人不同，就有了不同的表达！画家看到了，可能会画出美景；诗人看到了，可能会即兴作诗一首；音乐家看到了，可能会谱一首曲子(我印象比较深刻的是在电影《海上钢琴师》里，男主角用音乐表达不同人的情绪的桥段)；程序员看到了，说不定会写段hello world......
 
 **虽然表达方式不同，但实际要表达的内容是相同的！**
 
-演讲就是一种表达方式，**内容是内核**，演讲只是外在，你也可以写文章或画图表来表达！所以对演讲来说，最最重要的是**内容**!演讲技巧只是锦上添花！
+演讲就是一种表达方式，**内容是内核**，演讲只是外在，你也可以写文章或画图表来表达！所以对演讲来说，最最重要的是**内容**！演讲技巧只是锦上添花！
 
-举个我上周经历的反例！
+举个我经历的反例！
 
-公司请了一位老师来给大家培训演讲技巧，这位老师给自己挖了个坑：「我现在到外面去，你们讨论一下，任意给定一个演讲时间，任意给定一个标题！两分钟后，我从外面进来，从门口开始看到标题，我就开始讲，你们倒计时，我会在规定时间的正负5秒之内结束演讲！」既然他自己挖坑了，公司几个做技术的很乐意帮忙再多挖几下！出的题目是：「如何实现Oracle高可用？」
+公司请了一位老师来给大家培训演讲技巧，这位老师给自己挖了个坑：「我现在到外面去，你们讨论一下，任意给定一个演讲时间，任意给定一个标题！两分钟后，我从外面进来，从门口开始看到标题，我就开始讲，你们倒计时，我会在规定时间的正负5秒之内结束演讲！」既然他自己挖坑了，公司几个做技术的很乐意做个顺水人情---填填土！出的题目是：「如何实现Oracle高可用？」
 
 不可否认老师的演讲技巧！是进门就讲了，是在规定时间里讲完了！但是！！！我不知道对非技术人员来说是什么感觉，反正对技术人员来说，就是扯淡！！！为什么呢？这位老师只知道Oracle是个软件，其它一无所知，特别是对「高可用」的理解，就是谬误了！他在两分钟的演讲里，说的内容实际是「如何做出好用的软件」！
 
 > **高可用**：
-  英文名High Availability，简称HA。简单来说，就是保证软件的不间断运行！「如何实现Oracle高可用？」其实就是要说如何保证Oracle的不间断运行！和如何使Oracle好用完全就是两码事！
+  英文名High Availability，简称HA。简单来说，就是保证软件的不间断运行！「如何实现Oracle高可用？」其实就是要说如何保证Oracle的不间断运行！与如何使Oracle好用完全就是两码事！
+
 
 所以，如果你的内容本来就是错误的、空洞的，演讲得再动听都没用！就好比是以前很流行的电视广告，无论什么东西，推广人员都能说得天花乱坠，例如就一个晾衣架，用户都能被说得心潮澎湃的，这就是推广人员的技巧！但是如果用户最后买回来发现是个垃圾(没有内容)，最终用户是不会买帐的！最终结果不是退货，就是用户再也不会买该公司的产品了！而且后面这个推广人员再怎么口若悬河，大家也只会嗤之以鼻！
 
@@ -38,7 +51,9 @@ published: false
 
 # 了解听众
 
-了解听众可以从两个层面来讲：
+有内容了，你需要考虑如何表达，对不同的听众你需要做不同的表达！如何做呢？首先，你需要「了解听众」！
+
+「了解听众」可以从两个层面来讲：
 
 - 听众的层级
 - 听众的诉求
@@ -56,6 +71,7 @@ published: false
 韦小宝打断陈的话：「要反清就是因为他们抢了我们的钱和女人，是不是？复不复明不过是脱了裤子放屁，关人鸟事呀！行了，大家都是聪明人，了解！继续说」。
 陈近南点头：「总之呀，如果能做成功的话，就有无数的银两跟女人，你愿不愿意去呀？」
 韦小宝大喜，激昂地道：「愿意！」
+
 
 就我自身而言，前段时间我针对不同层级的人做了编程相关的培训，一批是刚毕业的大学生，一批是公司的初、中级开发人员，虽然都是讲编程，但是侧重点就完全不同。对大学生来说，对编程还是一无所知，我对他们讲的是编程的基本技能。而对于初、中级开发人员，已经具备了编程技能，我主要给他们讲了相关的流程及原理方面的内容。如果我反过来，对大学生讲流程和原理，他们连编程是什么还不知道，肯定是听得一脸懵逼；而对初、中级开发讲基本技能，他们肯定听得犯困，因为都是已经知道的东西。
 
@@ -81,7 +97,7 @@ published: false
 
 我们可以回想一下，当我们去听别人分享的时候，我们是以什么样的心态去听分享的？
 
-我们是去消遣吗？我相信没有人会去听分享来消遣!要消遣你可以去看场电影、或听个演唱会什么的！去砸场子吗？对于一个你不熟悉或不了解的人，为什么要去砸场子呢？除非脑子不好使了！！！其实我们去听分享的目的只有一个，就是**希望有所收获**。无论是知识上的深入，还是开阔眼界！
+我们是去消遣吗？我相信没有人会去听分享来消遣！要消遣你可以去看场电影、或听个演唱会什么的！去砸场子吗？对于一个你不熟悉或不了解的人，为什么要去砸场子呢？除非脑子不好使了！！！其实我们去听分享的目的只有一个，就是**希望有所收获**。无论是知识上的深入，还是开阔眼界！
 
 郭德纲在他的相声里说了个段子：「你们花500块钱过来听相声，就是图个乐，你多乐乐，才能值回票价。比如这个乐了，值20块钱，这个值30块钱，那个不好笑，退30块钱。最后一算，嗯～值了！你守着那500块钱是乐不出来的，如果你看着500块钱真乐了，这个病你500块钱治不好～」
 
@@ -91,9 +107,11 @@ published: false
 
 # 缓解紧张
 
+相信很多人不敢演讲的一个原因，就是**过于紧张**！这里我分享一下我的一些经验！
+
 我有段时间很羡慕那些在台上收放自如的讲者，羡慕他们在台上的从容，为什么他们不紧张呢？应该有不少人都有这样的想法吧？
 
-我一度认为自己紧张是由于自己内向的性格导致；而实际上看了《内向也是一种优势》后，发现自己对内向的认识也是错的(我确实是内向性格，但内向性格不是我想的那样),具体可见[此文](https://www.ivaneye.com/2016/10/16/introvert.html)。
+我一度认为自己紧张是由于自己内向的性格导致；而实际上看了《内向也是一种优势》后，发现自己对内向的认识也是错的(我确实是内向性格，但内向性格不是我想的那样),具体可见[此文](https://ivaneye.com/2016/10/16/introvert.html)。
 
 实际上，**紧张是普遍现象**。像罗永浩、罗振宇、李笑来等这些比较经常做公众演讲的人也都会紧张。比如，罗永浩在他的《我的奋斗》这本书里就说了他当年应聘新东方老师的经历，由于紧张，差点就没进入新东方；罗胖呢，你可以去听一听他第25期的罗辑思维《这一代人的怕与爱》，这是罗辑思维开播以来，罗胖第一次公开演讲。你再对比下前一期录制的罗辑思维，你就能明显的感觉到罗胖的紧张了；李笑来在他的《我也有话要说》里，也说了自己演讲会紧张！
 
@@ -107,7 +125,7 @@ published: false
 
 而在台上演讲时，台下听众的目光都盯着你看。这要是在原始时代，这么多双眼睛盯着你，那基本就说明你陷入了危险之中了，能不紧张吗？
 
-紧张的另一个原因，就是**未知**！你不知道未来会发生什么！即所谓的**不怕贼偷，就怕贼惦记**！回想一下，你在上学，老师突然有一天说：「明天考试」！你是不是立马就紧张了？因为你不知道考试内容！而最紧张的时候是什么时候呢？是发卷子的时候！而当你拿到卷子后，反而没那么紧张了吧！考完试，报分数的时候，你是不是又特紧张了？所以唬人的有效方法不是**你瞅啥**？而是**你等着**！！！
+紧张的另一个原因，就是**未知**！你不知道未来会发生什么！即所谓的**不怕贼偷，就怕贼惦记**！回想一下，你在上学，有一天老师突然说：「明天考试」！你是不是立马就紧张了？因为你不知道考试内容！而最紧张的时候是什么时候呢？是发卷子的时候！而当你拿到卷子后，反而没那么紧张了吧？考完试，报分数的时候，你是不是又特紧张了？所以唬人的有效方法不是**你瞅啥**？而是**你等着**！！！
 
 再回到演讲上，就是因为你不知道演讲时会发生什么事，所以才会紧张！你没法确保在台上不忘词、也不能确保就能回答出听众的所有问题！
 
@@ -119,9 +137,9 @@ published: false
 
 如何**缓解紧张**呢？**刻意练习**！
 
-前面说了，**紧张的其中一个原因是未知，未知的原因是没做过**!所以你不踏出这一步，只能在这个圈里打转！这可以回到前面说的「舒适区」、「学习区」，「恐慌区」理论！你一直在舒适区里，不去学习区，你永远得不到成长，你永远在台下羡慕着台上的人！别人在不断的练习，不断的扩大舒适区，最后可能他的舒适区超过了你的恐慌区！所以在你看来你会紧张得要死的场合，别人能轻松的应付！
+前面说了，**紧张的其中一个原因是未知，未知的原因是没做过**！所以你不踏出这一步，只能在这个圈里打转！这可以回到前面说的「舒适区」、「学习区」，「恐慌区」理论！你一直在舒适区里，不去学习区，你永远得不到成长，你永远在台下羡慕着台上的人！别人在不断的练习，不断的扩大舒适区，最后可能他的舒适区超过了你的恐慌区！所以在你看来你会紧张得要死的场合，别人能轻松的应付！
 
-当然你不可能一口吃成胖子！你从来没做过演讲，不可能立刻去做上万听众的演讲！只能一步一步来！以我个人为例，五年前，我是个在台前就紧张得要死、手心出、浑身发抖，基本说不出话的人！在这五年里，我从会议上的发言开始，到三、五人的内部分享，再到几十人的大学生培训、内部员工培训，一直到最近公司里的技术大会演讲！一步步的慢慢练习！现在我依然会紧张，但是我知道要准备什么，知道要说什么！内部培训、员工培训什么的，现在对我来说，基本都能掌控了！
+当然你不可能一口吃成胖子！还没会爬，就想着跑！容易扯到蛋！！！你从来没做过演讲，不可能立刻去做上万听众的演讲！只能一步一步来！以我个人为例，五年前，我是个在台前就紧张得要死、手心出、浑身发抖，基本说不出话的人！在这五年里，我**从小型会议上的发言开始锻炼，适应后就尝试进行三到五人的内部分享，再尝试几十人的大学生培训、内部员工培训，一直到最近公司里的技术大会演讲！一步步的慢慢练习**！现在的我依然会紧张，但是我知道要准备什么，知道要说什么！内部培训、员工培训什么的，现在对我来说，基本都能掌控了！
 
 所以，尝试走出那一步，有了第一次，你就会发现，原来就那么回事！**无关性格，只关乎经历**！
 
@@ -131,9 +149,9 @@ published: false
 
 在你确定了演讲内容、面向的听众后，就要开始着手准备了。**再牛逼的演讲高手都需要准备**！即使是乔布斯也不例外，或者说就是因为充份的准备，才使得苹果的每场发布会都能引起震撼，成为演讲范本---乔布斯在每场发布会之前，都会提前很长时间做充足的准备，不是提前几天，也不是提前几个星期，是提前几个月。
 
-我以前的一个误区是：「演讲是需要天份的！」相信不止我一个人有这个想法吧？很久以前，我以为那些在台上侃侃而谈的人，一是由于性格外向，二来就是有天份。实际上两个观点都是错误的。是否能在台上侃侃而谈和性格没有关系，前面已经说了。而天份呢？用网络的一个段子来回答：「我努力的时候，你看不到！我成功了，你TM跟我说有天份」！
+我以前的一个误区是：「演讲是需要天份的！」相信不止我一个人有这个想法吧？很久以前，我以为那些在台上侃侃而谈的人，一是由于性格外向，二来就是有天份。实际上两个观点都是错误的。是否能在台上侃侃而谈和性格没有关系，前面已经说了。而天份呢？用网络的一个段子来回答：「我努力的时候，你看不到！我成功了，你TM跟我说我有天份」！
 
-**台上一分钟，台下十年功**！不止是适用于演员！对演讲者而言也是这样！台上的每一分钟表现都是需要台下花十倍，百倍甚至千倍的时间来准备的！为什么？
+**台上一分钟，台下十年功**！不止适用于演员！对演讲者而言也是这样！台上的每一分钟表现都是需要台下花十倍，百倍甚至千倍的时间来准备的！为什么？
 
 - 首先，前面已经说了，其实大家都会紧张，只是演讲高手能控制住而已。而且就压力而言，演讲高手的压力要比新手压力大得多！就以乔布斯为例，他的每场发布会都影响着苹果新产品的销售额，万一发布会搞砸了，导致新品无人问津，那损失的可是上亿美元。而对于我们新手来说，演讲失败不过是被听者抱怨一下，压力其实并没有想象中那么大！即使失败了，只要自我总结，实际上是个**提升的过程**。话虽这样说，但是**谁不更愿意成功呢？谁不愿意一鸣惊人？**
 
@@ -143,7 +161,7 @@ published: false
 
 那我们该**准备些什么呢？**
 
-首先，就是幻灯片了，可以是PPT、也可以是Keynote，甚至网页版的SlideShow或者pdf都可以(**重在内容**)！布局、动画、样式这些东西对新手来说都不是重点。对于一般的分享，我偏向于使用网页版的SlideShow，例如nodePPT,pandoc+reveal.js等！第一，我可以使用Markdown来编写内容，使用它们直接渲染成幻灯片，也可以转化成其他格式，比如:docx,pdf等，**一次编写，到处生成**！我不必关心样式、布局，只关心内容就可以了。第二，网页版的SlideShow方便访问，我上传到我的网站上后，只要有网络，在哪里都可以演示（这里就是我编写的一个PPT,https://www.ivaneye.com/ppt/share/nodeppt/jvm.htm）！ 而比较正式的场合，比如技术大会，我才会使用PPT。我个人并不太喜欢用ppt，在《从用户体验角度看工具》(https://www.ivaneye.com/2016/04/08/tools.html) 里，我专门对Office做了吐槽！
+首先，就是幻灯片了，可以是PPT、也可以是Keynote，甚至网页版的SlideShow或者pdf都可以(**重在内容**)！布局、动画、样式这些东西对新手来说都不是重点。对于一般的分享，我偏向于使用网页版的SlideShow，例如nodePPT,pandoc+reveal.js等！第一，我可以使用Markdown来编写内容，使用它们直接渲染成幻灯片，也可以转化成其他格式，比如:docx,pdf等，**一次编写，到处生成**！我不必关心样式、布局，只关心内容就可以了。当然了，使用什么，完全看个人。**不要被工具绑架**！第二，网页版的SlideShow方便访问，我上传到我的网站上后，只要有网络，在哪里都可以演示（这里就是我编写的一个[PPT](https://ivaneye.com/ppt/share/nodeppt/jvm.htm)！ 而比较正式的场合，比如技术大会，我才会使用PPT。我个人并不太喜欢用PPT，在[《从用户体验角度看工具》](https://ivaneye.com/2016/04/08/tools.html) 里，我专门对Office做了吐槽！
 
 除了幻灯片，对新手来说，很必要准备**演讲稿**。也就是把你将要讲的内容，完完全全的写下来。为什么呢？第一，如果你一上台，脑子就空白了，忘词了，就把演讲稿给背下来。给自己留条后路，做不到一鸣惊人，至少把演讲讲完！第二呢，你写下演讲稿后，自己多读几遍，你就会发现有很多地方语言是不通顺的、逻辑是不清晰的，读完后可能自己都不知道在说什么。这些地方都是要进行调整的地方。
 
@@ -153,18 +171,18 @@ published: false
 
 我们知道了要准备什么，那该**如何准备呢？**
 
-对于演讲稿和幻灯片的准备，到底**是先写演讲稿然后总结归纳出幻灯片，还是先做幻灯片再细化展开成演讲稿，这个看个人习惯**。我两个都尝试过，最后还是习惯于先做幻灯片，再细化成演讲稿！这种做法对我来说，有两个好处。一是，因为我个人的思路就是先有个整体结构，然后一个个的细化，典型的程序员思维！所以先做幻灯片（实际上就是Markdown文档）再细化符合我的思维习惯。二来，如果是我熟悉的演讲，我做完幻灯片，演讲稿也可以省了！
+对于演讲稿和幻灯片的准备，到底**是先写演讲稿然后总结归纳出幻灯片，还是先做幻灯片再细化展开成演讲稿，这个看个人习惯**。我两个都尝试过，最后还是习惯于先做幻灯片，再细化成演讲稿！这种做法对我来说，有两个好处。一是，因为我个人的思路就是先有个整体结构，然后一个个的细化，典型的「程序员思维」！所以先做幻灯片（实际上就是Markdown文档）再细化符合我的思维习惯。二来，如果是我熟悉的演讲，我做完幻灯片，演讲稿也可以省了！
 
 而对于预演，乔布斯可以提前把会场包下来进行现场排练，我们可没这个条件。怎么办呢？表演里面有个叫**无实物表演**的表演方式！什么意思呢？就是什么都没有，表演一个打电话、敲门的过程，是不是很傻？但是是很考验演技的。很久以前，陈佩斯和朱时茂表演的小品《吃面》里，陈佩斯就有对吃面的「无实物表演」。还有之前的好莱坞电影复仇者联盟，实际的英雄打斗基本都是无实物表演，在无特效的下，猩红女巫就是个女神经！！！
 
 ![](/assets/think/talk/02.gif)
 
-我们可以用类似的方法进行练习！脑子里想象有很多人来听你的演讲，然后开始你的演讲，模拟出你在台上的所有动作！如果你觉得丢人或不好意思，那就找个没人的地方。以前很火的疯狂英语创始人李阳，练英语的方法就是找个没人的地方去吼英语！练演讲没必要吼，正常的说话就可以了，所以在自己屋里就可以了。
+我们可以用类似的方法进行练习！脑子里想象有很多人来听你的演讲，然后开始你的演讲，模拟出你在台上的所有动作！如果你觉得丢人或不好意思，那就找个没人的地方。以前很火的疯狂英语创始人李阳，练英语的方法就是找个没人的地方去吼英语！练演讲没必要吼，正常的说话就可以了，所以没必要专门找个没人的地方，直接躲在自己屋里就可以了。
 
 这样做的目的有三个：
 
 - **预估时间**：预估你的演讲所花费的时间。比如你把文字稿念一遍要花多长时间？这个时间可以说是你演讲所需要的最短时间！你再脱稿演讲一遍，看要花多长时间？第一次脱稿演讲时间，基本是你演讲所要花费的最长时间。根据这两个时间，你基本能预估你的演讲时间了！
-- **反馈调整**：在预演时最好录音，过程中无论什么情况都不要停，比如卡壳了，说错了。修正也好，继续说也行，都不要停。全部说完了，再去听录音，根据录音来做调整。哪里说得还不错，哪里需要改进，哪里语气要调整了。
+- **反馈调整**：在预演时最好录音，过程中无论什么情况都不要停，比如卡壳了，说错了。修正也好，继续说也行，都不要停。全部说完了，再去听录音，根据录音来做调整！哪里说得还不错，哪里需要改进，哪里语气要调整了。
 - **找感觉**：想像听众的目的，就是模拟现场。使自己能熟悉那种感觉，能降低正式演讲时的紧张感。因为你不再是一无所知的了，虽然只是模拟的！
 
 准备的目的就是找熟悉感，降低紧张或突发情况带来的影响，使得演讲能够顺利完成！
@@ -177,26 +195,26 @@ published: false
 
 内容的控制，最好把控在最后听众能提两到三个问题的程度。这样既不会冷场，也不会由于问题太多，无法一一回答，让有疑问的听众无法得到满意的答复！
 
-如何把控内容呢？有个前提，就是你自己得**理清概念**！即你需要**清楚你所讲内容的相关的所有概念**！那什么是概念呢？**概念是对某一类事物或规律的抽象**！对技术类演讲更是如此，因为技术类的所谓的**术语**很多(其实就是概念)，如果你只是用，而不清楚这些术语是什么，那最后听众提问的时候就尴尬了！比如：你要讲分布式缓存系统！你巴拉巴拉的讲了一个小时，怎么设计，怎么实现的，有哪些哪些优势，秒杀目前市面上的其他系统！最后听众问你什么是**分布式**！你回答不上来，是不是很尴尬？**你自己都不能完全搞明白的内容，你好意思去分享？！**
+如何把控内容呢？有个前提，就是你自己得**理清概念**！即你需要**清楚你所讲内容的相关的所有概念**！那什么是概念呢？**概念是对某一类事物或规律的抽象**！对技术类演讲更是如此，因为技术类的所谓的**术语**很多(其实就是概念)，如果你只是用，而不清楚这些术语是什么，那最后听众提问的时候就尴尬了！比如：你要讲分布式缓存系统！你巴拉巴拉的讲了一个小时，怎么设计，怎么实现的，有哪些哪些优势，秒杀目前市面上的其它系统！最后听众问你什么是**分布式**！你回答不上来，是不是很尴尬？**你自己都不能完全搞明白的内容，你好意思去分享？！**
 
-理清概念后，你需要确认哪些是核心概念，哪些是非核心概念，对核心概念需要详细讲解，针对这些讲解，你需要**打磨你的用词**，让别人能没歧义的理解你的内容！你用的这个词是什么意思？听众能不能听懂这个词？或者说听众对这个词是否可能会有误解？我是否要对这个词做些解释？比如：我之前演讲的题目叫---《*** 的演变》，那什么是演变？什么是演？什么是变？什么发生了演变？为什么需要演变？这个题目和我的内容是否契合？等等等等！
+理清概念后，你需要确认哪些是核心概念，哪些是非核心概念，对核心概念需要详细讲解，针对这些讲解，你需要**打磨你的用词**，让别人能没歧义的理解你的内容！你用的这个词是什么意思？听众能不能听懂这个词？或者说听众对这个词是否可能会有误解？我是否要对这个词做些解释？比如：我之前演讲的题目叫---《\*\*\* 的演变》，那什么是演变？什么是演？什么是变？什么发生了演变？为什么需要演变？这个题目和我的内容是否契合？等等等等！
 
-同时在准备内容时，多问几个为什么！我为什么要讲这个？别人听了有什么收获？我这样讲别人能不能听懂？别人在这个地方可能会遇到什么坑？可能会有什么疑问？我该如何回答他？
+同时在准备内容时，**多问几个为什么**！我为什么要讲这个？别人听了有什么收获？我这样讲别人能不能听懂？别人在这个地方可能会遇到什么坑？可能会有什么疑问？我该如何回答他？
 
 最后，在预演时，最好模拟一下听众提问环节，你从听众的角度来思考一下，可以提什么问题，进行模拟，自问自答！
 
 **这样做的目的，是为了确保听众最后所提出的问题是对你核心内容的疑问，而不是对其中的非核心概念或用词不清的疑问！**
 
-前面只是准备阶段。在正式演讲后，你在回答听众问题时，最好注意如下几点：
+前面只是准备阶段。对于在正式演讲，你在回答听众问题时，这里给几点建议：
 
 - 听众提出问题后，你按自己的理解复述一遍听众的问题，并和听众确认是否理解有误。这样做的目的，第一是确认听众的问题是什么。第二实际是**给自己一个思考的时间**。
 - 如果这个问题是自己准备的问题，那么就将现成的答案说出来就行了
-- 而如果这个问题不是之前自己已经准备的问题：那么在复述听众问题时，快速的思考一下如何回答这个问题。一般来说，听众提出的问题都是对你所讲内容的一些疑问(如果你做了前面的准备的话)，你进行答疑即可。
+- 而如果这个问题不是之前已经准备的问题：那么在复述听众问题时，快速的思考一下如何回答这个问题。一般来说，听众提出的问题都是对你所讲内容的一些疑问(如果你做了前面的准备的话)，你进行答疑即可。
 - 但是如果自己确实无法回答这个问题：那么如果这个问题已经超出了你所讲内容的范围，你可以回答说：「这个问题不在我们今天讨论的范围内！如果有兴趣的话，我们可以会后找时间一起探讨」！如果问题在你所讲内容的范围呢，但是你依然无法回答(一部分原因就是准备不足了，也可能是确实没遇到过)。那么，你可以如实回答：「不好意思，个人能力有限，目前这个问题我还无法回答，我先记下来，有机会我们可以一起来讨论一下」！
 
 # 几个技巧
 
-你至今走过最长的路是什么路？是**套路**！演讲也不例外，最后一篇，介绍几个常用演讲套路！
+你至今走过最长的路是什么路？是**套路**！演讲也不例外，虽然技巧不是重点，但是**确保内容后，技巧就能锦上添花了**！这里介绍几个常用的演讲套路！
 
 ## 坡道-发现-甜点
 
@@ -247,7 +265,7 @@ published: false
 
 在Linux里也有类似的观点，**Do one thing at a time and do well**!
 
-在演讲里也是类似的，**一次只说一件事**！把这件事说明白了，再去说另外一件事。保持听众的思维连贯！如果你讲的内容包含了多个内容，听众需要自行去区分，增加了听众的理解难度！
+在演讲里也是类似的，**一次只说一件事**！把这件事说明白了，再去说另外一件事。保持听众的思维连贯性！如果你讲的内容包含了多个内容，听众需要自行去区分，增加了听众的理解难度！(后面我会专门针对这个主题来说)
 
 ## 具体化数字
 
@@ -255,24 +273,28 @@ published: false
 
 > 一台CD播放器要75美元左右，能容纳10~15首歌，也就是5美元一首歌。你也可以花150美元买一台闪存播放器，它也能容纳10~15首歌曲，也就是10美元一首歌。你还可以买一台兼容mp3格式的CD播放器，价格大概是150美元，可以容纳150首歌。相当于每首歌1美元。或者你可以花300美元买一台带有硬盘驱动的Jukebox播放器，它能装下1000首歌，相当于每首歌花30美分。我们研究了所有这些设备，这就是我们想要开拓的领域，我们今天要推出一款产品，这款产品叫做iPod。ipod的最大特点是能够存储1 000首歌。
 
+
 回想一下，以前mp3厂商是怎样宣传mp3的？是不是都是宣称自己的mp3多少多少M，多少多少G！你觉得哪种描述方式更能打动你？
 
 其实除了打动人！具体化数字还能**忽悠人**！
 
 大家应该都听说过kindle吧？kindle是Amazon发布的电子书阅读器。你看Amazon对其的介绍：「Kindle Paperwhite拥有**超长的续航能力**，在一次充电后，以每天阅读半小时计算，可以使用**数周之久**！」你的第一印象是不是Kindle的续航能力很牛逼？但是你计算下看看，以最长的4周计算，每天半小时，**续航也就15小时而已**！！！
 
-# 类比
+## 类比
 
 在讲述别人不熟悉的内容时，**类比** 是很好的讲述方法！还是举我已经举过很多次的例子：「**元xx**」！比如「元编程」，「元认知」等等！
 
 我们知道3D打印机可以打印桌子、花瓶，甚至手枪，而有一种3D打印机，它可以打印出3D打印机，这个3D打印机就是「**元3D打印机**」！
 
----
+# 总结
 
 说了这么多废话，不知各位有没有体会？其实最切身的体会就是自己去做一场演讲！**知行和一**就是说**知道做不到，等于不知道！**
 
-# 参考资料
+# 参考与相关资料
 
 - 《我也有话要说》
 - 《高效演讲》
 - 吴伯凡专栏文章：本能
+- 我的网页PPT：https://ivaneye.com/ppt/share/nodeppt/jvm.htm
+- 内向也是一种优势：https://ivaneye.com/2016/10/16/introvert.html
+- 《从用户体验角度看工具》：https://ivaneye.com/2016/04/08/tools.html
