--- a/source/_posts/think/2017-01-02-mind.md
+++ b/source/_posts/think/2017-01-02-mind.md
@@ -50,7 +50,13 @@ published: false
 
 我们知道，内存的访问速度要快于硬盘的速度！但是即使是在内存里的数据，由于结构的不同，访问速度也是有天壤之别的！为什么同样是学习，「别人家的孩子」学得就比你快？记得比你牢？除了数据所存放的位置，还有就是你所**组织知识的方式**！这就是本周我想讨论的问题！
 
-# 增长函数与大O表示法
+# 增长率
+
+小学成绩 -> 初中成绩 -> 高中成绩
+
+知识量增加，知识获取难度增加，耗时增加
+
+增长率不同！
 
 ## 什么是大O
 ## 为什么使用大O
