--- a/source/_posts/think/2017-01-02-mind.md
+++ b/source/_posts/think/2017-01-02-mind.md
@@ -50,16 +50,39 @@ published: false
 
 我们知道，内存的访问速度要快于硬盘的速度！但是即使是在内存里的数据，由于结构的不同，访问速度也是有天壤之别的！为什么同样是学习，「别人家的孩子」学得就比你快？记得比你牢？除了数据所存放的位置，还有就是你所**组织知识的方式**！这就是本周我想讨论的问题！
 
-# 增长率
+# 学霸与学渣
 
-小学成绩 -> 初中成绩 -> 高中成绩
+在我印象里面，小学考个98分是正常，100分是好学生，95分还凑合，你要考个90分，那就是成绩差的学生了！好学生与差学生的分差不过10分而已！这时候还看不出学渣和学霸的差异！
 
-知识量增加，知识获取难度增加，耗时增加
+而到了初中，好学生依然能考95～100！差的可能就70~80分，甚至不及格！好学生与差学生的分差有20~30分左右！这时候学渣和学霸就有了比较明显的差异了！
 
-增长率不同！
+到了高中，学霸和学渣就明显的拉开了距离！学霸依然能考95～100！学渣可能就常年在及格线下了！
 
-## 什么是大O
-## 为什么使用大O
+其中一个原因是从小学->初中->高中，知识越来越多，难度也越来越高！我们抛开难度不谈，从知识量的层面来扯扯！
+
+我们假设：
+
+- 小学的知识量为10
+- 初中的知识量为100
+- 高中的知识量为1000
+
+我们再假设学渣和学霸的知识接收度都是100%！现在我们来考试，考试实际上就是知识输出的过程！
+
+我们假设从脑子中找一个知识点耗时1秒钟！在小学的时候，因为知识量本来就很小，从10个知识点里面找你想要的内容，无论你是从前往后找，还是从后往前找，还是随机找，都没有太大的差异！最多就10秒的差异！
+
+而到了初中的时候，你需要从100个知识点里面找你想要的内容，你如果每次还是从前到后一个个的找，明显就吃力了很多吧？假设你要找的知识点恰好在最后，那你和学霸之间最大就有99秒的差异了！
+
+再到高中，你要从1000个知识点里面找你想要的内容，你再从前往后找，你和学霸的最大差异就达到了999秒！达15分钟之久！一个知识点你就需要花费十几分钟的时间，考试的时候那么多的知识点，你能考几个？！时间都耗费到找知识点上了！
+
+给张图更形象一点：
+
+![](/assets/think/mind/math.png)
+
+假设x轴是知识量，y轴是从知识量里查找知识所耗费的时间！可以看出在刚开始的时候，学渣、学霸和普通学生没太多差异！而越往后，学霸和学渣的差异越来越大！学渣找知识的时间越来越长(红色线)，呈指数型增长，我们可以称其为「学渣线」！而学霸查找知识的时间并没有随着知识量的增加而明显的变长(灰色线)，我们可以称其为「学霸线」！对这些线是否有些印象？其实就是指数函数线，线性函数线和对数函数线！
+
+在软件行业，对这种增长有个记法，称为大O记法！学渣线可以记为O(n^2)，普通学生记为O(n)，学霸线可以记为O(lg^n)！
+
+看到这里，你可能会有一个疑问，为什么学渣和学霸计算差异时是计算最大差异呢？如果学渣运气特别好，每次找第一次就能找到所需要的知识点了，即每次只需要一秒就搞定过了，那最终可能速度要比学霸的高！至少得计算个平均值吧？反问一个问题，假如你是老师，你有两个学生，一个学生成绩稳定，平均分为90；另一个学生成绩很不稳定，可能不及格，可能100，但是平均分也是90分！现在要让你选择一个去比赛，你选谁？
 
 # 袋集合
 
