--- a/source/_posts/think/2017-01-02-mind.md
+++ b/source/_posts/think/2017-01-02-mind.md
@@ -84,7 +84,112 @@ published: false
 
 看到这里，你可能会有一个疑问，为什么学渣和学霸计算差异时是计算最大差异呢？如果学渣运气特别好，每次找第一次就能找到所需要的知识点了，即每次只需要一秒就搞定过了，那最终可能速度要比学霸的高！至少得计算个平均值吧？反问一个问题，假如你是老师，你有两个学生，一个学生成绩稳定，平均分为90；另一个学生成绩很不稳定，可能不及格，可能100，但是平均分也是90分！现在要让你选择一个去比赛，你选谁？
 
-# 袋集合
+# 学渣的脑「袋」
+
+- bag，袋或背包
+
+收集，不整理，todoList里的收集箱，各种笔记
+输出
+
+```java
+import java.util.Iterator;
+
+/**
+ *
+* @ClassName: Bag
+* @Description: 背包
+*
+* 单纯用来存储元素，只支持添加O(1)，迭代操作O(N)
+*
+* 使用背包的目的是因为他很简单，添加很快，而且能迭代所有元素（无所谓先进后出还是先进先出），不需要更多的功能。
+* 在图论中，背包会经常作为里面的一种方便、高效的数据结构而使用
+*  
+* @author minjun
+* @date 2015年5月23日 下午7:03:08
+*
+* @param <E>
+ */
+public class Bag<E> implements Iterable<E> {
+
+	private Node first;
+
+	/**
+	 *
+	* @Title: add
+	* @Description: 添加元素，最快的添加方式当然是从头开始添加
+	* @param @param e    设定文件
+	* @return void    返回类型
+	* @throws
+	 */
+	public void add(E e){
+		if(e==null)
+			throw new NullPointerException("添加操作参数不能为空");
+
+		Node oldFirst=first;
+		first=new Node(e);
+
+		first.next=oldFirst;
+	}
+
+	private class Node{
+		E e;
+
+		Node next;
+
+		public Node(E e){
+			this.e=e;
+		}
+	}
+
+	@Override
+	public Iterator<E> iterator() {
+		return new BagIterator();
+	}
+
+	private class BagIterator implements Iterator<E>{
+
+		//为了保护头结点，这里用一个变量临时充当头结点
+		private Node temp=first;
+
+		@Override
+		public boolean hasNext() {
+			return temp!=null;
+		}
+
+		/**
+		 * 为了快速获取元素，这里会直接取第一个元素，这样，我们的背包结构就成了一个“先进后出”的栈
+		 * 这里不是刻意营造一个栈结构，而是为了保证添加和迭代速度，自然而然使得背包成了一个“栈”
+		 */
+		@Override
+		public E next() {
+			if(!hasNext())
+				throw new RuntimeException("没有元素了，你还取什么东西！");
+
+			Node oldFirst=temp;
+			temp=oldFirst.next;
+			return oldFirst.e;
+		}
+
+		@Override
+		public void remove() {
+			throw new RuntimeException("暂时不支持删除操作");
+		}
+
+	}
+
+	public static void main(String[] args) {
+		Bag<Integer> bag=new Bag<Integer>();
+		bag.add(3);
+		bag.add(5);
+		bag.add(1);
+		bag.add(4);
+
+		for(int b:bag){
+			System.out.println(b);
+		}
+	}
+}
+```
 
 # 链表
 
