--- a/ppt/share/nodeppt/2016work.md
+++ b/ppt/share/nodeppt/2016work.md
@@ -5,12 +5,12 @@ transition: stick
 theme: dark
 
 [slide]
-# 2016年年终总结
+# 2016年工作总结
 ## 王一帆
 
 [slide]
 
-# 2016年工作
+## 2016年工作
 
 - 分布式服务项目「Hydra」 {:&.bounceIn}
 - ffuse项目
@@ -18,7 +18,7 @@ theme: dark
 - 参与分布式缓存项目
 
 [slide]
-# 分布式服务项目「Hydra」
+## 分布式服务项目「Hydra」
 
 
 |人员(小时)|设计|客户端|管理中心|服务节点|维护|小计|
@@ -33,7 +33,6 @@ theme: dark
 -	降低使用Hydra框架开发服务的难度,提高服务开发效率
 -	优化服务发布流程
 -	提供完善的服务治理，方便运维
-- 替换掉OSGi
 
 [slide]
 ## 执行情况
@@ -50,16 +49,16 @@ theme: dark
 [slide]
 ## 成绩
 
-- 老版Hydra暴露了过多的技术细节，目前项目组使用Hydra开发服务过于复杂，影响开发效率。复杂的主要原因是项目组开发人员需要关注OSGi的相关配置，比如模块的导入导出，且相关配置需要在运行时才会提示是否有错误！在Hydra3中，摒弃了复杂的OSGi技术，并对技术细节进行了封装，实现了本地测试、debug和远程debug功能，极大的提高了开发效率。且在部署上提高了易用性，初步得到了项目组的认可。
-- 老版Hydra的发布流程与运维发布流程无法很好的结合，老版Hydra默认基于命令行的发布方式，而运维通常使用shell拷贝方式进行方法，OSGi需要通过设置优先级来判断bundle的启动顺序，运维的拷贝方式无法进行优先级设置，可能导致bundle启动顺序错乱的问题。Hydra3的部署结合UMC进行发布，实现界面操作即可完成发布流程，同时UMC提供了监控功能，能方便的对Hydra3进行服务调用、运行情况的监控与报警。
-- 老版Hydra缺少完善的服务治理，老版Hydra只有服务查看功能，而没有治理功能。Hydra3提供了完善的服务治理功能，包括服务升降级、客户端管理、服务端管理、权重管理、执行队列管理等功能。
+- 提高开发效率
+- 简化发布流程
+- 完善服务治理
 
 [slide]
 ## 问题
 
-1. 设计阶段缺少对实际使用情况的考虑，在后续实际使用过程中，又针对项目组反馈的问题做了调整
-2. Hydra3使用了Spring，对版本没有做隔离，项目组Spring版本只能跟Hydra3走，限制了一部分的灵活性
-3. 项目开发完成后，推广使用有较长的空档期
+- 设计阶段缺少对实际使用情况的考虑，在后续实际使用过程中，又针对项目组反馈的问题做了调整
+- Hydra3使用了Spring，对版本没有做隔离，项目组Spring版本只能跟Hydra3走，限制了一部分的灵活性
+- 项目开发完成后，推广使用有较长的空档期
 
 [slide]
 # ffuse项目
@@ -100,7 +99,7 @@ theme: dark
 ## 执行情况
 
 - [x] 完成基准测试平台的架构设计
-- [ ] 完成基准测试平台的原型及流程设计
+- [X] 完成基准测试平台的原型及流程设计
 - [ ] 搭建开发框架
 - [ ] 完成基准测试平台的开发
 - [ ] 完成基准测试平台的测试
@@ -109,7 +108,7 @@ theme: dark
 [slide]
 ## 成绩
 
-目前已完成基准测试平台的架构设计，正在进行原型及流程设计！后台基于Hydra3开发，直接复用Hydra3的节点功能，节省服务端的开发.
+目前已完成基准测试平台的架构设计、原型及流程设计！后台基于Hydra3开发，直接复用Hydra3的节点功能，节省服务端的开发.
 
 [slide]
 # 缓存项目
