--- a/source/_posts/think/2017-01-02-mind.md
+++ b/source/_posts/think/2017-01-02-mind.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 date: 2017-01-02
-title: 数据结构、算法与思维模式：序
+title: 学渣到学神之路：数据结构、算法与思维模式
 categories: [think]
 tags: [experience,think,随笔]
 avatarimg: "/img/head.jpg"
