--- a/source/_posts/think/2017-01-08-arch.md
+++ b/source/_posts/think/2017-01-08-arch.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 date: 2017-01-08
-title: 企业组织架构与软件架构模型
+title: 小强创业记：组织架构变迁
 categories: [architecture]
 tags: [architecture]
 avatarimg: "/img/head.jpg"
