--- a/source/_posts/think/2017-01-13-path.md
+++ b/source/_posts/think/2017-01-13-path.md
@@ -1,13 +1,15 @@
 ---
 layout: post
 date: 2017-01-13
-title: 魔兽中的关键路径
+title: 不会玩魔兽的项目经理不是好项目经理
 categories: [think]
 tags: [experience,think,随笔]
 avatarimg: "/img/head.jpg"
 author: wangyifan
 
 ---
+
+很明显，这是标题党～只是扯扯**项目管理**！
 
 扯这个话题的原因是，上周部门有一个关于「关键路径」的分享，个人觉得「关键路径」这玩样比较鸡肋！这里做个复盘，确认一下是否确实是个鸡肋～
 
@@ -50,31 +52,33 @@ author: wangyifan
 
 大概问题是这样的：“烧水泡茶"有五道工序：
 
-1. 烧开水
-2. 洗茶壶
-3. 洗茶杯
-4. 拿茶叶
-5. 泡茶
+- 洗水壶
+- 烧开水
+- 洗茶壶
+- 洗茶杯
+- 拿茶叶
+- 泡茶
 
-烧开水、洗茶壶、洗茶杯，拿茶叶是泡茶的前提。
+洗水壶是烧开水的前提；烧开水、洗茶壶、洗茶杯，拿茶叶是泡茶的前提。
 
-各道工序用时表： 烧开水 15分钟， 洗茶壶 2分钟， 洗茶杯 1钟分， 拿茶叶 1分钟， 泡茶 1分钟，如何以最快的速度烧水泡茶？
+各道工序用时表： 洗水壶1分钟，烧开水15分钟，洗茶壶2分钟，洗茶杯1钟分，拿茶叶1分钟， 泡茶1分钟，如何以最快的速度烧水泡茶？
 
 正常人都知道：
 
-- 先烧水
+- 先洗水壶
+- 烧开水
 - 烧水过程中，洗刷茶具，拿茶叶
 - 水烧开后沏茶
 
 ![](/assets/think/critialpath/path2.png)
 
-以这个流程来看，如果我们想中午12点开始烧水泡茶，那么烧水的「最早开始时间」需要是12点，「最早结束时间」 是12点一刻！另一条现上，洗茶壶的「最早开始时间」是12点，「最早结束时间」 是12点1分；洗茶杯的「最早开始时间」是12点1分，「最早结束时间」 是12点2分；拿茶叶的「最早开始时间」 是12点2分，「最早结束时间」 是12点3分！而泡茶的「最早开始时间」是12点一刻(必须要等水少好)，「最早结束时间」 是12点16分；喝到茶的「最早开始时间」是12点16分！
+以这个流程来看，如果我们想中午12点开始烧水泡茶，那么洗水壶的「最早开始时间」需要是12点，「最早结束时间」是12点1分；烧水的「最早开始时间」需要是12点1分，「最早结束时间」是12点16分！另一条现上，洗茶壶的「最早开始时间」是12点1分，「最早结束时间」是12点2分；洗茶杯的「最早开始时间」是12点2分，「最早结束时间」是12点3分；拿茶叶的「最早开始时间」是12点3分，「最早结束时间」是12点4分！而泡茶的「最早开始时间」是12点16分(必须要等水少好)，「最早结束时间」是12点17分；喝到茶的「最早开始时间」是12点17分！
 
-再反过来推，如果要在12点16分能喝到茶！也就是说喝茶的「最晚开始时间」是12点16分！那么泡茶的「最晚开始时间」是12点15分，「最晚结束时间」 是12点16分；烧水「最晚开始时间」是12点，「最晚结束烧水** 时间是12点15分；拿茶叶的「最晚开始时间」是12点14分，拿茶叶「最晚结束时间」是12点15分；洗茶杯的「最晚开始时间」是12点13分，洗茶杯「最晚结束时间」是12点14分；洗茶壶的「最晚开始时间」是12点12分，洗茶壶「最晚结束时间」是12点13分；
+再反过来推，如果要在12点17分能喝到茶！也就是说喝茶的「最晚开始时间」是12点17分！那么泡茶的「最晚开始时间」是12点16分，「最晚结束时间」是12点17分；烧水「最晚开始时间」是12点1分，「最晚结束烧水」时间是12点16分；洗水壶的「最晚开始时间」需要是12点，「最晚结束时间」是12点1分；拿茶叶的「最晚开始时间」是12点15分，拿茶叶「最晚结束时间」是12点16分；洗茶杯的「最晚开始时间」是12点14分，洗茶杯「最晚结束时间」是12点15分；洗茶壶的「最晚开始时间」是12点13分，洗茶壶「最晚结束时间」是12点14分；
 
-可以看出，烧水和泡茶的「最早开始时间与最晚开始时间、最早结束时间与最晚结束时间是相同的」，也就是说烧水和泡茶是不能有偏差的！这条路径确定了泡茶的最终所耗时间，这条路径就是「关键路径」！
+可以看出，洗水壶、烧水和泡茶的「最早开始时间与最晚开始时间、最早结束时间与最晚结束时间是相同的」，也就是说洗水壶、烧水和泡茶是不能有偏差的！这条路径确定了泡茶的最终所耗时间，这条路径就是「关键路径」！
 
-而洗茶壶、洗茶杯，拿茶叶的「最早开始时间与最晚开始时间、最早结束时间与最晚结束时间是不同的」！这条路径不决定最终的泡茶时间，所以是非关键路径！其中的12分钟的偏差就是「总时差」！而洗茶壶的「自由时差」是12分钟、洗茶杯的「自由时差」是11分钟、那茶叶的「自由时差」是10分钟！
+而洗茶壶、洗茶杯，拿茶叶的「最早开始时间与最晚开始时间、最早结束时间与最晚结束时间是不同的」！这条路径不决定最终的泡茶时间，所以是非关键路径！其中的12分钟的偏差就是「总时差」！而如果洗茶杯的最早开始时间变为12点5分，则洗茶壶的「自由误差」就是3分钟！
 
 到这里都没什么问题，问题在下面，我们举个复杂的例子！
 
@@ -109,10 +113,23 @@ author: wangyifan
 - 实线表示先后顺序
 - 虚线为必要条件，表示所指向的目标需要执行时，除了要在实线初始端的目标之后执行外，还需要在虚线初始端的目标之后执行
 
-# 关键路径法打造「万金油」
+如果做过项目管理，这个情况是不是很熟悉？五个人力，如何高效的完成项目？
 
-我们来看看使用关键路径法来打造「万金油」！
+# 统筹方法打造「万金油」
 
+上面的烧水泡茶是个很简单的例子，一眼就能看出如何优化执行！这个例子你能一眼就看出最优执行方案吗？我们来看看使用统筹方法来打造「万金油」！
+
+- 先找出最长耗时的活动
+
+#「万金油」中的关键路径
+
+# 关键路径悖论
+
+## 估算误差
+
+## 最终都是关键路径
+
+# 总结
 
 关键路径的基本问题：
 1、  什么是关键路径？
@@ -129,11 +146,3 @@ author: wangyifan
 会，如果关键路径上的活动被延误了，或者管理层要求比原定日期提前完工。
 7、  出现负浮动时间时，怎么办？
 负浮动时间必须尽快加以解决，可以进行赶工、快速跟进等。
-
-# 关键路径举例
-
-# 关键路径悖论
-
-## 估算误差
-
-## 最终都是关键路径
