--- a/source/_posts/think/2017-01-13-path.md
+++ b/source/_posts/think/2017-01-13-path.md
@@ -113,13 +113,77 @@ author: wangyifan
 - 实线表示先后顺序
 - 虚线为必要条件，表示所指向的目标需要执行时，除了要在实线初始端的目标之后执行外，还需要在虚线初始端的目标之后执行
 
-如果做过项目管理，这个情况是不是很熟悉？五个人力，如何高效的完成项目？
+如果做过项目管理，这个情况是不是很熟悉？其实就是五个人力，如何高效的完成项目？
 
 # 统筹方法打造「万金油」
 
 上面的烧水泡茶是个很简单的例子，一眼就能看出如何优化执行！这个例子你能一眼就看出最优执行方案吗？我们来看看使用统筹方法来打造「万金油」！
 
-- 先找出最长耗时的活动
+- **首先细化任务**
+
+不论有没有做过项目经理，应该都知道，**一个任务的时间越长，误差就越大**！回想一下你考四六级的时候，你提前一年准备，计划三个月背单词、三个月看选择与阅读、三个月看写作，轻松搞定四六级。呸！别做梦了！最后可能单词书都翻不到C，最熟悉的单词就是abandon，别问我为什么知道的！
+
+一般情况下一个任务应该控制在3天之内，最长不超过5天，这才能把控！对于上面的任务，我们来看，哪些步骤是可以拆的！
+
+其实**所有的建造过程都可以拆**！前面说了，人族里有个特殊技能，可以合作建造，时间是原来的1/n！其实就是变相的把任务拆了！目前我们的建造任务有:
+
+- 造祭坛60s
+- 造兵营60s
+- 造铁匠铺70s
+- 造神秘圣地70s
+- 造农场35s
+
+实际上可以拆成：
+
+- 造祭坛 12s * 5
+- 造兵营 12s * 5
+- 造铁匠铺 14s * 5
+- 造神秘圣地 14s * 5
+- 造农场 7s * 5
+
+- **其次找出最长路径**
+
+现在所有的任务都拆到不能再拆了！从这些任务中找出耗时最长的任务！通过其前置任务和后置任务，构建出一条任务路径！为什么这里不叫关键路径呢？因为只是一个初步选择，并不是特别准确！
+
+很明显，这里最耗时的任务是升级主城，耗时140s！它没有前置任务，有两个后置任务：训练山丘之王和造神秘圣地！训练山丘之王55s，造神秘圣地70秒，好像造神秘圣地比训练山丘之王耗时长。
+
+但是，请注意，神秘圣地可不是70秒哦，是12s * 5 哦！而训练山丘之王是实打实的55s！这里该如何选择呢？从上图可以看出，训练山丘之王之后就没有后置任务了，而建造神秘圣地后，还有后置任务！所以我们先选择神秘圣地作为后置任务，训练山丘之王作为备选项！那么现在的任务时间是140s + 70s = 210s！
+
+神秘圣地的后置任务是训练一个男巫+三个女巫！看起来也是只能一个一个的建造！28s + (30s * 3) = 118s！但是，你可以多造几个神秘圣地啊！比如造4个神秘圣地，那训练男巫女巫的时间就变成了30s了！但是相对的，建造神秘圣地又多了,最长要消耗12s * 5 * 3 = 180s了，最短要消耗12s * 3 = 36s！怎么选择？
+
+我们先不管这么多，依然直接选择最耗时且最明显的任务，即一个一个的训练男巫和女巫，耗时118s！目前总共耗时140s + 70s + 118s = 328s！目前这就是我们「万金油」任务的最长路径，但这不是个聪明的路径！
+
+- **接着进行组合**
+
+我们已经有了一条最长路径！我们将其它的任务，构成另一条或多条路径，使得任务时间和最长路径中的任务相接近，越接近说明人员使用越饱和，这样才能使得每个人力得到充分的发挥！万恶的资本主义啊！
+
+为了方便说明，我们给五个农民分别标号A,B,C,D,E！
+
+首先在升级主城的140s时间里！由于时间跨度很大，我们的组合方式就很灵活！比如说我们可以让A造祭坛60s，B和C造兵营30s，D造铁匠铺70s，E造两个农场70s！30s后兵营完成，训练两个士兵和一个火枪手,20s * 2 + 26s * 2 = 92s！为什么要这么分配呢？因为火枪手要等铁匠铺，而造好两个士兵后，正好铁匠铺完成！同时B和C再造一个兵营30s！完成后训练三个火枪手，26s * 3 = 78s！B和C再造一个兵营30s!完成后训练最后一个兵20s！祭坛完成后，立即训练大法师，同时A去造农场！D和E造完农场后，再一起造一个农场17.5s！
+
+我们算一下，一共耗时多少秒！
+
+- A:60s + 35s = 95s
+- B:30s + 30s + 30s = 90s
+- C:30s + 30s + 30s = 90s
+- D:70s + 17.5s = 87.5s
+- E:35s + 35s + 17.5s = 87.5s
+- 大法师：55s
+- 兵营1：30s + 20s * 2 + 26s * 2 = 122s
+- 兵营2：60s + 26s * 3 = 138s
+- 兵营3：90s + 20s = 110s
+
+可以看出，农民的工作时间大约是90秒上下，分工还是比较平均的！士兵和火枪手在140s内全部训练完成！一般项目也是这样，迁移把控较好，压力也不是很大！到了后期，就开始忙了！
+
+主城升级完成后，立即训练山丘之王55s，同时五个农民一起去造神秘圣地14s！造完了就开始造第二个神秘圣地！同时训练两个女巫30s * 2 = 60s！造完第二个神秘圣地后，再造一个神秘圣地！同时第二个神秘圣地训练一个女巫30s！第三个神秘圣地造完后，训练男巫28s！至此「万金油」组合完成！我们再看下时间！
+
+- 此时五个农民耗时相同，都是12s * 3 = 36s
+- 山丘之王：55s
+- 神秘圣地1：14s + 30s * 2 = 74s
+- 神秘圣地2：28s + 30s = 58s
+- 神秘圣地3：42s + 28s = 70s
+
+至此，整个任务的流程已经大致确定了！
 
 #「万金油」中的关键路径
 
